Proper --add-opens on runJvm (#515)